@@ -304,6 +304,8 @@ Version CVS HEAD (?)
     - Fixed variable underflow in VirtualMidiDevice, which caused graphical
       virtual keyboards in frontends / instrument editors being stuck.
     - Bugfix in VirtualMidiDevice: process note on with velocity 0 as note off.
+    - Implemented missing handling of MIDI "running status".
+    - MME: pass time stamps to the sampler.
 
   * audio driver:
     - ASIO driver fixes for newer gcc versions (fix from PortAudio)
